Foram adicionados testes de integração.
